fixes gray background not showing

--- a/app/assets/stylesheets/base/_devise.scss
+++ b/app/assets/stylesheets/base/_devise.scss
@@ -3,8 +3,8 @@
 *****************************************/
 
 body.devise {
+  .pusher { background-color: #DADADA !important; }
   .main.container {
     height: 100%;
-    background-color: #DADADA;
   }
 }
